<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/siginup_welcome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:logo="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start|center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        tools:context=".SignUpWelcomeActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:src="@drawable/dispositivos" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_2_to_3"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/black"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creat_your_account"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_continue"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</LinearLayout>